fix whyus overflow

--- a/Frontend/src/components/WhyUs/WhyUs.css
+++ b/Frontend/src/components/WhyUs/WhyUs.css
@@ -32,6 +32,7 @@
   /* border: 1px solid red; */
   gap: 1rem;
   padding: 0.4rem;
+  overflow: hidden;
   .imgCard {
     cursor: pointer;
     width: 25%;
